[package]
name = "migration_checker"
version = "0.1.0"
authors = ["Chas Martin <chasm925@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiberius = { version = "0.5", features = ["sql-browser-async-std"] }
async-std = { version = "1.9", features = ["attributes"] }
anyhow = "1.0"